# GlobalHealthRanking

./: .gitignore  LICENSE  README.md  sampleOld.csv  setup.cfg
src/: definitions.py  raw_data_to_clinical_trial_v1.py
src/ClinicalTrialsTracker/: clinical_trial_v1_to_clinical_trial.py  definitions.py  raw_data_to_clinical_trial_v1.py
src/ClinicalTrialsTracker/model/: __init__.py  clinical_trial.py  clinical_trial_v1.py
src/ClinicalTrialsTracker/model/enum/: __init__.py  category.py  overall_status.py
src/model/: clinical_trial.py  clinical_trial_v1.py
src/model/enum/: category.py  overall_status.py
