[metadata]
name = ClinicalTrialsTracker
version = 0.1.0
license = MIT
description = n/a
long_description = file: README.md
author = Yi Nian Lee
author_email = yinian.lee.sean@gmail.com
classifiers=
    Development Status :: 3 - Alpha
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src